# ARDA

./: .env.example  .gitignore  CHANGELOG.md  FLEXIBLE_RTL_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PIPELINE_VERIFICATION_IMPROVEMENTS.md  README.md  RTL_FIX_SUMMARY.md  RTL_JSON_MIGRATION_SUMMARY.md  RTL_REVIEW_ANALYSIS.md  a.out  agent_configs.json  methods.txt  pyproject.toml
alg2sv/: __init__.py  agents.py  cli.py  mock_agents.py  open_source_synthesis.py  pipeline.py  simplified_pipeline.py  simulator_integration.py  vivado_integration.py  workspace.py
alg2sv/agents/: __init__.py  openai_runner.py
alg2sv/core/stages/: base.py  quant_stage.py  rtl_stage.py  spec_stage.py
alg2sv/domain/: __init__.py  evaluation.py  quantization.py  verification.py
alg2sv/observability/: __init__.py  events.py
alg2sv/runtime/: agent_runner.py
alg2sv/tools/: __init__.py  lint.py  reporting.py  synthesis.py
arda/: __init__.py
ardagen/: bundle_utils.py  cli.py  model_config.py  pipeline.py
ardagen/agents/: config_loader.py  json_parser.py  openai_runner.py  registry.py  response_handler.py  strategies.py  tools.py
ardagen/core/: __init__.py  orchestrator.py  strategies.py
ardagen/core/stages/: __init__.py  architecture_stage.py  evaluate_stage.py  lint_stage.py  microarch_stage.py  rtl_stage.py  simulation_stage.py  synth_stage.py  verification_stage.py
ardagen/domain/: __init__.py  architecture.py  contracts.py  evaluation.py  feedback.py  quantization.py  rtl_artifacts.py  synthesis.py  verification.py
ardagen/observability/: __init__.py  manager.py  tools.py
ardagen/runtime/: __init__.py  agent_runner.py
ardagen/tools/: lint.py  reporting.py  simulation.py  synthesis.py
docs/: README.md  api_docs.md  architecture.md  changelog.md  developer_guide.md  examples.md  troubleshooting.md  user_guide.md
docs/adr/: 0001-arda-architecture-refactor.md  0002-confidence-based-feedback.md
docs/architecture/: autonomous_architecture_generation.md  feedback_loop_control.md  flexible_rtl_architecture.md  pipeline_verification_improvements.md
docs/development/: implementation-notes.md
docs/migrations/: PHASE_2_ARCHITECTURE_AGENT_COMPLETE.md  REFACTORING_COMPLETE.md  rtl_fix_summary.md  rtl_json_migration.md
docs/releases/: phase3-summary.md
docs/reviews/phase_0/: conv2d_rtl_review.md
docs/reviews/phase_1/: bpf16_rtl_review_phase1.md  complex_adaptive_filter_rtl_review_phase1.md  conv2d_rtl_review_phase1.md  fft256_rtl_review_phase_1.md
docs/reviews/phase_2/: bpf16_phase2_review.md  complex_adaptive_filter_phase2_review.md  conv2d_phase2_review.md  fft256_phase2_review.md
docs/reviews/phase_3/: conv2d_phase3_schema_fix_review.md
docs/troubleshooting/: critical-fixes.md  error-tracking.md  verification-issues.md
examples/: bpf16_bundle.txt  complex_adaptive_filter_bundle.txt  fft256_bundle.txt
generated_rtl/: BPF16_axi_stream_if.sv  axi_stream_if.sv  axi_stream_if_params.sv  bpf16_axi_stream.sv  bpf16_axi_wrapper.sv  bpf16_core.sv  coeff_rom.sv  fft256_axi_stream.sv
generated_rtl/phase-1/bpf16/rtl/: algorithm_core.sv  algorithm_top.sv  params.svh
generated_rtl/phase-1/complex_adaptive_filter/rtl/: algorithm_core.sv  algorithm_top.sv  params.svh
generated_rtl/phase-1/conv2d/rtl/: algorithm_core.sv  algorithm_top.sv  params.svh
generated_rtl/phase-1/fft256/: algorithm_core.sv  algorithm_top.sv  params.svh
generated_rtl/phase-2/bpf16/rtl/: fir_adder_tree.sv  fir_coeff_rom.sv  fir_control_fsm.sv  fir_mac_pipeline.sv  fir_params.svh  fir_tap_buffer.sv  fir_top.sv
generated_rtl/phase-2/complex_adaptive_filter/rtl/: adaptive_fir_mac_pipeline.sv  adaptive_kalman_filter_ctrl_fsm.sv  coefficient_adaptation_lms.sv  input_buffer.sv  input_normalizer.sv  kalman_state_estimator.sv  nonlinear_transform.sv  output_buffer.sv  performance_metrics_unit.sv
generated_rtl/phase-2/conv2d/rtl/: conv2d_activation.sv  conv2d_axi_interface.sv  conv2d_control_fsm.sv  conv2d_line_buffer.sv  conv2d_output_buffer.sv  conv2d_params.svh  conv2d_pe.sv  conv2d_pe_array.sv  conv2d_top.sv  conv2d_weight_bram.sv  conv2d_window_extractor.sv
generated_rtl/phase-2/fft256/rtl/: fft_bit_reversal.sv  fft_control_fsm.sv  fft_memory.sv  fft_params.svh  fft_top.sv  fft_twiddle_rom.sv
test_algorithms/: conv2d_bundle.txt
test_algorithms/complex_adaptive_filter/: algo.py  meta.yaml  vectors.py
test_algorithms/conv2d/: algo.py  meta.yaml  vectors.py
test_algorithms/fft256/: algo.py  meta.yaml  vectors.py
tests/: README_OPENAI_TESTS.md  conftest.py  openai_test_config.py  test_architecture_stage.py  test_observability_manager.py  test_openai_runner.py  test_openai_stages.py  test_orchestrator.py  test_pipeline_feedback.py  test_rtl_json_generation.py  test_workspace.py
tests/analysis/: test_results_analysis.md
tests/fixtures/: fixture_manager.py
tests/utils/: log_viewer.py  retry_handler.py  schema_validator.py  stage_logger.py
